--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "leaflet": "^1.6.0",
+    "leaflet.chinatmsproviders": "^3.0.2",
+    "less": "^3.11.3",
+    "less-loader": "^6.1.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
