--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "echarts": "^4.8.0",
     "leaflet": "^1.6.0",
     "leaflet.chinatmsproviders": "^3.0.2",
     "less": "^3.11.3",
     "less-loader": "^6.1.3",
+    "view-design": "^4.3.0-rc.4",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue2-animate": "^2.1.3",
+    "vuebar": "^0.0.20",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
