--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "echarts": "^4.8.0",
+    "echarts-liquidfill": "^2.0.6",
+    "esri-leaflet": "^2.4.1",
     "leaflet": "^1.6.0",
     "leaflet.chinatmsproviders": "^3.0.2",
     "less": "^3.11.3",
     "less-loader": "^6.1.3",
+    "proj4leaflet": "^1.0.2",
     "view-design": "^4.3.0-rc.4",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
